training regime 3 implemented, training_regime 4 still in progress

--- a/experiment/style.css
+++ b/experiment/style.css
@@ -82,6 +82,16 @@ This stuff will vary by experiment.
     border: 5px solid red;
 }
 
+.chosenCorrect {
+    border: 5px solid green;
+}
+
+
+.highlighted {
+    border: 5px dashed black;
+}
+
+
 .notChoices {
 	border: 0px solid red;
 }
